Fixed Formatting on AboutUs.html
Team cards were overlapping on smaller displays. Usage of a card-deck class helped fix this.

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -8,7 +8,6 @@ body {	/* Sets minumum width for the screen */
 }
 
 .col-centered { /* Sets bootstrap columns to display inline with eachother */
-	display:inline-block;
 	float:none;
 }
 
@@ -100,12 +99,12 @@ h4 { /* Aligns header text to center */
 }
 
 .fullscreen-link{ /* Makes the entirety of the div a link*/
- position:absolute; 
-  width:100%;
-  height:100%;
-  top:0;
-  left: 0;
-  z-index: 3;
+ 	position:absolute; 
+  	width:100%;
+  	height:100%;
+  	top:0;
+  	left: 0;
+  	z-index: 3;
 }
 
 .caption{
